增加viper配置管理和zap日志管理模块

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-DBHOST=19.224.154.190
-DBDRIVER=mysql
-DBUSER=cshiaa
-DBPASSWORD=cshiaa
-DBNAME=cshiaa
-DBPORT=3306
+DB_HOST=19.224.154.190
+DB_DRIVER=mysql
+DB_USER=cshiaa
+DB_PASSWORD=cshiaa
+DB_NAME=cshiaa
+DB_PORT=3306
+
+JENKINS_URL=http://localhost:8082
+JENKINS_USER=admin
+JENKINS_PASSWORD=11dc5bf784c1a2554cf1a0b4160b92471a
