0421 全局日志格式修改  增加gorm sql输出到日志

--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ storage:
     type: local
 zap:
     filename: ./log/cshiaa.log
-    level: INFO
+    level: Info
     maxage: 30
     maxbackups: 3
     maxsize: 10
